# tree-sitter-mojo

./: .editorconfig  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-mojo.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_mojo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: raises-fn.mojo  struct-definition.mojo  trait-definition.mojo
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt
